removido comentario de dependecia igrp.jar, cria issues em ide (intellij vscode).

--- a/IGRP-Template/pom.xml
+++ b/IGRP-Template/pom.xml
@@ -512,13 +512,13 @@
 
 		
 		<!-- System Dependencies -->
-		<!-- <dependency>
+		<dependency>
 			<artifactId>IGRP</artifactId>
 			<groupId>nosi</groupId>
 			<version>1.0</version>
 			<scope>system</scope>
     		<systemPath>${pom.basedir}/src/main/webapp/WEB-INF/lib/IGRP.jar</systemPath>
-		</dependency> -->
+		</dependency>
 		
 		
 			
