--- a/IGRP-Template/pom.xml
+++ b/IGRP-Template/pom.xml
@@ -6,7 +6,7 @@
 	
 	<groupId>IGRP-Template</groupId>
 	<artifactId>IGRP-Template</artifactId>
-	<version>1.5.0.221212</version>
+	<version>1.5.1.230204</version>
 	<packaging>war</packaging>
 	
 	<properties>
@@ -17,14 +17,13 @@
 		<maven.compiler.source>1.8</maven.compiler.source>	
 		<maven.compiler.target>1.8</maven.compiler.target>
 
-		<tomee.version>8.0.5</tomee.version>
 		<javadoc.plugin.version>3.0.1</javadoc.plugin.version>
 		<tomee.classifier>plus</tomee.classifier>
-		<hibernate.version>5.6.8.Final</hibernate.version>
+		<hibernate.version>5.6.14.Final</hibernate.version>
 		<hibernate.jpa_2_1_api.version>1.0.2.Final</hibernate.jpa_2_1_api.version>
 		<jersey.version>2.29</jersey.version>
 		<mysql.version>8.0.28</mysql.version>
-		<postgres.version>42.3.3</postgres.version>
+		<postgres.version>42.4.1</postgres.version>
 		<h2.version>2.1.210</h2.version>
 		<sqlserver.version>10.2.0.jre8</sqlserver.version>
 		<model.mapper.version>3.1.0</model.mapper.version>
@@ -35,7 +34,7 @@
 		<apache.libintl.version>0.18.3</apache.libintl.version>
 		<apache.commons.beanutils.version>1.9.4</apache.commons.beanutils.version>
 		<apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
-		<apache.commons.text.version>1.9</apache.commons.text.version>
+		<apache.commons.text.version>1.10.0</apache.commons.text.version>
 		<apache.commons.io.version>2.11.0</apache.commons.io.version>
 		<apache.logging.log4j.version>2.17.2</apache.logging.log4j.version>
 		<apache.poi.version>5.2.2</apache.poi.version>
@@ -55,7 +54,7 @@
 		<!-- OPEN HTML TO PDF -->
 		<openhtml.version>1.0.10</openhtml.version>
 
-		<jsoup.version>1.14.3</jsoup.version>
+		<jsoup.version>1.15.3</jsoup.version>
 
 		<!-- Barcode ... -->
 		<google.zxing.version>3.4.1</google.zxing.version>
@@ -83,9 +82,9 @@
 		<junit.vintage.version>5.8.2</junit.vintage.version>
 
 		<!-- JavaEE API & jax-rs version -->
-		<javaee.api.version>8.0-5</javaee.api.version>
+		<javaee.api.version>8.0-6</javaee.api.version>
 		<cxf.rt.frontend.jaxrs.version>3.3.6</cxf.rt.frontend.jaxrs.version>
-		<tomee.jaxrs.version>8.0.4</tomee.jaxrs.version>
+		<tomee.jaxrs.version>8.0.14</tomee.jaxrs.version>
 		
 		<!-- JavaDev Underscore Version: Transform JSON To XML Preserving the order of the elements -->
 		<javadev.underscore.version>1.76</javadev.underscore.version>
@@ -95,19 +94,16 @@
 		<activiti.bpmn.converter.version>6.0.0</activiti.bpmn.converter.version>
 
 		<!-- TomEE Embedded Maven Plugin -->
-		<tomee.maven.plugin.version>8.0.10</tomee.maven.plugin.version>
+		<tomee.maven.plugin.version>8.0.14</tomee.maven.plugin.version>
 		
 		<!-- TomEE Embedded -->
-		<tomee.embedded.version>8.0.7</tomee.embedded.version>
+		<tomee.embedded.version>8.0.14</tomee.embedded.version>
 		
 		<!-- Flyway Migration API & Docker PostgreSQL -->
-		<flyway.version>8.5.8</flyway.version>
-		<igrp.db.user>[DB_USER]/igrp.db.user>
-		<igrp.db.password>[DB_PASSWORD]</igrp.db.password>
-		<!-- Comment this line when run IGRPWEB+Postgres+Docker -->
-		<igrp.db.dsn>jdbc:postgresql://[DB_HOST]:[DB_PORT]/[DB_IGRP_NAME]</igrp.db.dsn> </property><!-- Eg: jdbc:postgresql://localhost:5432/db_igrp  -->
-		<!-- Uncomment this line when run IGRPWEB+Postgres+Docker -->
-		<!--<igrp.db.dsn>jdbc:postgresql://postgres:5432/db_igrp</igrp.db.dsn>--> 
+		<flyway.version>9.14.1</flyway.version>
+		<igrp.db.user>[DB_USER]</igrp.db.user>  <!-- Eg: postgres -->
+		<igrp.db.password>[DB_PASSWORD]</igrp.db.password> <!-- Eg: Password -->
+		<igrp.db.dsn>jdbc:postgresql://[DB_HOST]:[DB_PORT]/[DB_IGRP_NAME]</igrp.db.dsn><!-- Eg: jdbc:postgresql://localhost:5432/db_igrp  -->
 		<igrp.migration.location>classpath:nosi/core/db/migration/igrp/postgres</igrp.migration.location>
 		
 		<!-- K8s & Docker -->
@@ -182,11 +178,11 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 				<!-- TO BE REPLACED https://mvnrepository.com/artifact/org.dom4j/dom4j -->
-<dependency>
-    <groupId>org.dom4j</groupId>
-    <artifactId>dom4j</artifactId>
-    <version>2.1.3</version>
-</dependency>
+		<dependency>
+		    <groupId>org.dom4j</groupId>
+		    <artifactId>dom4j</artifactId>
+		    <version>2.1.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-hikaricp</artifactId>
@@ -519,7 +515,8 @@
 			<groupId>nosi</groupId>
 			<version>1.0</version>
 			<scope>system</scope>
-    		<systemPath>${pom.basedir}/src/main/webapp/WEB-INF/lib/IGRP.jar</systemPath>
+	  <!-- Ignore error V -->	
+			<systemPath>${pom.basedir}/src/main/webapp/WEB-INF/lib/IGRP.jar</systemPath>  
 		</dependency>
 		
 		
