--- a/IGRP-Template/pom.xml
+++ b/IGRP-Template/pom.xml
@@ -43,7 +43,7 @@
 
 		<reflections.version>0.10.2</reflections.version>
 		<apache.axis.version>1.8.0</apache.axis.version>
-		<jdt.core.compiler.version>4.6.1</jdt.core.compiler.version>
+		<jdt.core.compiler.version>3.32.0</jdt.core.compiler.version>
 
 		<!-- JGit -->
 		<jgit.version>4.7.0.201704051617-r</jgit.version>	
@@ -415,11 +415,12 @@
 		</dependency>
 		
 		<!-- For integration with git protocol/repositories -->
-		<!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit --> 
+	
+		<!-- https://mvnrepository.com/artifact/org.eclipse.jdt.core.compiler/ecj -->
 		<dependency>
-		    <groupId>org.eclipse.jgit</groupId>
-		    <artifactId>org.eclipse.jgit</artifactId>
-		    <version>${jgit.version}</version>
+			<groupId>org.eclipse.jdt.core.compiler</groupId>
+			<artifactId>ecj</artifactId>
+			<version>${jdt.core.compiler.version}</version>
 		</dependency>
 
 		<!-- Javadev underscore API for jsonToXml transformation purpose -->
