--- a/IGRP-Template/pom.xml
+++ b/IGRP-Template/pom.xml
@@ -407,11 +407,11 @@
 		    <version>31.1-jre</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.eclipse.jdt.core.compiler/ecj -->
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jdt/ecj -->
 		<dependency>
-			<groupId>org.eclipse.jdt.core.compiler</groupId>
-			<artifactId>ecj</artifactId>
-			<version>${jdt.core.compiler.version}</version>
+		    <groupId>org.eclipse.jdt</groupId>
+		    <artifactId>ecj</artifactId>
+		    <version>${jdt.core.compiler.version}</version>
 		</dependency>
 		
 		<!-- For integration with git protocol/repositories -->
